--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gun-Violence</title>
+    <title>Mass Shootings</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -429,5 +429,6 @@
 
 </body>
 </html>
+
 
 
